--- a/bootkernel/kernel/RaspberryPi5.config
+++ b/bootkernel/kernel/RaspberryPi5.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.6.33 Kernel Configuration
+# Linux/arm64 6.6.42 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-muntsos-linux-gnu-gcc (crosstool-NG 1.26.0) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -2017,6 +2017,7 @@ CONFIG_SPI_DW_MMIO=y
 # CONFIG_SPI_PCI1XXXX is not set
 # CONFIG_SPI_PL022 is not set
 # CONFIG_SPI_PXA2XX is not set
+# CONFIG_SPI_RP2040_GPIO_BRIDGE is not set
 # CONFIG_SPI_SC18IS602 is not set
 # CONFIG_SPI_SIFIVE is not set
 # CONFIG_SPI_MXIC is not set
@@ -4737,7 +4738,6 @@ CONFIG_CMA_ALIGNMENT=8
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_DMA_MAP_BENCHMARK is not set
 CONFIG_SGL_ALLOC=y
-# CONFIG_FORCE_NR_CPUS is not set
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
 CONFIG_GLOB=y
